# BoxBox

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  DESIGN.md  LICENSE  PRODUCT.md  README.md
.cursor/: mcp.json
.cursor/rules/: serenitynow.mdc
.impeccable/: design.json
Race Control/: .gitignore  README.md
Race Control/probe/: README.md
Race Control/server/: package.json
Race Control/server/src/: index.ts  state.ts
Race Control/server/test/: http.test.ts  parser.test.ts  state.test.ts
Race Control/web/: README.md  tsconfig.json
Race Control/web/src/: App.tsx  types.ts
Tuner/: README.md
Tuner/probe/: README.md  tuner-probe.mjs
Tuner/server/: package.json  tsconfig.json
Tuner/server/src/: diagnosis.ts  estimator.ts  index.ts  profile.ts  runstats.ts  segmentation.ts  state.ts  suggest.ts  trim.ts  wear.ts  wearEstimator.ts
Tuner/web/: index.html  package-lock.json  package.json  vite.config.ts
app/: index.html  package-lock.json  package.json
app/scripts/: send-test-packet.mjs
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
docs/: 2026 Season Pack Telemetry Output Structures (1) (1).txt
probe/: f1-udp-probe.mjs
release/: READ-ME-FIRST.txt
server/src/: index.ts  state.ts
server/test/: http.test.ts  parser.test.ts  state.test.ts
shared/parser/: README.md  constants.ts  index.ts  packets.ts  types.ts
tools/quali-probe/: .gitignore  Cargo.toml  README.md
tools/quali-probe/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts
(+176 files in other folders)
